[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddbj-search-converter"
authors = [{ name = "Bioinformatics and DDBJ Center" }]
readme = { file = "README.md", content-type = "text/markdown" }
version = "0.1.0"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
dependencies = [
    "elasticsearch",
    "httpx",
    "lxml",
    "pydantic",
    "SQLAlchemy>=2.0.0",
    "xmltodict",
]

[project.urls]
Homepage = "https://github.com/ddbj/ddbj-search-converter"
Documentation = "https://github.com/ddbj/ddbj-search-converter/blob/main/README.md"
Repository = "https://github.com/ddbj/ddbj-search-converter.git"

[project.optional-dependencies]
tests = [
    "isort",
    "lxml-stubs",
    "mypy",
    "pylint",
    "pytest-cov",
    "pytest-mock",
    "pytest",
    "types-requests",
    "types-xmltodict",
]

[project.scripts]
create_bp_date_db = "ddbj_search_converter.cache_db.bp_date:main"
create_bs_date_db = "ddbj_search_converter.cache_db.bs_date:main"
create_ddbj_dblink_db = "ddbj_search_converter.cache_db.ddbj_dblink:main"
create_sra_accessions_db = "ddbj_search_converter.cache_db.sra_accessions:main"
bp_xml_to_jsonl = "ddbj_search_converter.bioproject.bp_xml_to_jsonl:main"
bp_bulk_insert = "ddbj_search_converter.bioproject.bp_bulk_insert:main"
bs_xml_to_jsonl = "ddbj_search_converter.biosample.bs_xml_to_jsonl:main"
bs_bulk_insert = "ddbj_search_converter.biosample.bs_bulk_insert:main"
create_es_index = "ddbj_search_converter.es_mappings.create_es_index:main"

[tool.setuptools]
packages = [
    "ddbj_search_converter",
    "ddbj_search_converter.bioproject",
    "ddbj_search_converter.biosample",
    "ddbj_search_converter.cache_db",
    "ddbj_search_converter.es_mappings",
]

[tool.setuptools.package-data]
ddbj_search_converter = ["es_mappings/*.json"]

[tool.pytest.ini_options]
addopts = "--cov=ddbj_search_converter --cov-report=html:tests/htmlcov"
testpaths = ["tests/py_tests"]

[tool.mypy]
files = ["./ddbj_search_converter/**/*.py"]
follow_imports = "silent"
strict = true
plugins = "sqlalchemy.ext.mypy.plugin"

[tool.pylint.messages_control]
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
    "C0301", # Line too long
    "R0801", # Similar lines in 2 files
    "R0903", # Too few public methods
    "R0911", # Too many return statements
    "R0912", # Too many branches
    "R0913", # Too many arguments
    "R0914", # Too many local variables
    "R1705", # Unnecessary "else" after "return"
    "W0511", # Fixme
    "W0718", # Broad exception caught
    "W0719", # Exception type of Exception
    "I1101", # c-extension-no-member
]
