[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddbj-search-converter"
authors = [{ name = "Bioinformatics and DDBJ Center" }]
readme = { file = "README.md", content-type = "text/markdown" }
version = "0.1.0"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "duckdb",
    "elasticsearch>=8,<9",
    "httpx",
    "lxml",
    "psycopg2-binary",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/ddbj/ddbj-search-converter"
Documentation = "https://github.com/ddbj/ddbj-search-converter/blob/main/README.md"
Repository = "https://github.com/ddbj/ddbj-search-converter.git"

[project.optional-dependencies]
tests = [
    "isort",
    "lxml-stubs",
    "mypy",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[project.scripts]
check_external_resources = "ddbj_search_converter.cli.check_external_resources:main"
prepare_biosample_xml = "ddbj_search_converter.cli.prepare_biosample_xml:main"
prepare_bioproject_xml = "ddbj_search_converter.cli.prepare_bioproject_xml:main"
build_sra_and_dra_accessions_db = "ddbj_search_converter.sra_accessions_tab:main"
init_dblink_db = "ddbj_search_converter.cli.init_dblink_db:main"
create_dblink_assembly_and_master_relations = "ddbj_search_converter.dblink.assembly_and_master:main"
create_dblink_bp_relations = "ddbj_search_converter.dblink.bioproject:main"
create_dblink_bp_bs_relations = "ddbj_search_converter.dblink.bp_bs:main"
create_dblink_gea_relations = "ddbj_search_converter.dblink.gea:main"
create_dblink_metabobank_relations = "ddbj_search_converter.dblink.metabobank:main"
create_dblink_jga_relations = "ddbj_search_converter.dblink.jga:main"
create_dblink_sra_internal_relations = "ddbj_search_converter.dblink.sra_internal:main"
finalize_dblink_db = "ddbj_search_converter.cli.finalize_dblink_db:main"
dump_dblink_files = "ddbj_search_converter.cli.dump_dblink_files:main"
sync_ncbi_tar = "ddbj_search_converter.cli.sync_ncbi_tar:main"
sync_dra_tar = "ddbj_search_converter.cli.sync_dra_tar:main"
build_bp_bs_date_cache = "ddbj_search_converter.cli.build_bp_bs_date_cache:main"
generate_jga_jsonl = "ddbj_search_converter.jsonl.jga:main"
generate_bp_jsonl = "ddbj_search_converter.jsonl.bp:main"
generate_bs_jsonl = "ddbj_search_converter.jsonl.bs:main"
generate_sra_jsonl = "ddbj_search_converter.jsonl.sra:main"
regenerate_jsonl = "ddbj_search_converter.jsonl.regenerate:main"
es_create_index = "ddbj_search_converter.cli.es:main_create_index"
es_delete_index = "ddbj_search_converter.cli.es:main_delete_index"
es_bulk_insert = "ddbj_search_converter.cli.es:main_bulk_insert"
es_list_indexes = "ddbj_search_converter.cli.es:main_list_indexes"
es_health_check = "ddbj_search_converter.cli.es:main_health_check"
es_delete_blacklist = "ddbj_search_converter.cli.es:main_delete_blacklist"
es_snapshot = "ddbj_search_converter.cli.es_snapshot:main"
show_log_summary = "ddbj_search_converter.cli.debug.show_log_summary:main"
show_log = "ddbj_search_converter.cli.debug.show_log:main"
show_dblink_counts = "ddbj_search_converter.cli.debug.show_dblink_counts:main"


[tool.pytest.ini_options]
addopts = "--cov=ddbj_search_converter --cov-report=html:tests/htmlcov"
testpaths = ["tests/py_tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
files = ["./ddbj_search_converter/**/*.py", "./tests/**/*.py"]
follow_imports = "silent"
strict = true

[tool.pylint.messages_control]
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
    "C0301", # Line too long
    "R0801", # Similar lines in 2 files
    "R0903", # Too few public methods
    "R0911", # Too many return statements
    "R0912", # Too many branches
    "R0913", # Too many arguments
    "R0917", # Too many positional arguments
    "R0914", # Too many local variables
    "R0915", # Too many statements
    "R1702", # Too many nested blocks
    "R1705", # Unnecessary "else" after "return"
    "W0511", # Fixme
    "W0718", # Broad exception caught
    "W0719", # Exception type of Exception
    "I1101", # c-extension-no-member
]

[tool.hatch.build.targets.wheel]
packages = ["ddbj_search_converter"]
include = ["ddbj_search_converter/py.typed"]
